hphp/hack/test/typecheck/ternary5.php.exp
File "ternary5.php", line 14, characters 10-31:
Nested ternary expressions inside ternary expressions are ambiguous. Please add parentheses (Parsing[1002])
